--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
             <div class="col-xl-8">
                 <div class="call_to_action_img">
                     <img src="images/call_to_action_bg.jpg" alt="Call to action" class="img-fluid">
-                    <a class="venobox" data-autoplay="true" data-vbtype="video"
+                    <a class="venobox plaay_btn" data-autoplay="true" data-vbtype="video"
                         href="https://youtu.be/OwGkHosBiFU?si=Ooi0uWxcNkdRRqRy">
                         <i class=" fas fa-play"></i>
                     </a>
@@ -953,100 +953,98 @@
         FOOTER START
     ============================-->
     <footer class="mt_120 xs_mt_100 pt_120 xs_pt_100" style="background: url(images/footer_bg.jpg);">
-        <div class="wsus__footer_bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-3 col-lg-3 wow fadeInUp">
-                        <div class="wsus__logo_area">
-                            <a class="logo" href="index.html">
-                                <img src="images/footer_logo.png" alt="Freeit" class="img-fluid">
-                            </a>
-                            <p>Nunc in sollicitudin diam bibendum malesuada sodales porttitor.</p>
-                            <ul class="d-flex flex-wrap">
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            </ul>
-                        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3 col-lg-3 wow fadeInUp">
+                    <div class="wsus__logo_area">
+                        <a class="logo" href="index.html">
+                            <img src="images/footer_logo.png" alt="Freeit" class="img-fluid">
+                        </a>
+                        <p>Nunc in sollicitudin diam bibendum malesuada sodales porttitor.</p>
+                        <ul class="d-flex flex-wrap">
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
                     </div>
-                    <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
-                        <div class="wsus__footer_link">
-                            <h2>Navigation</h2>
-                            <ul>
-                                <li><a href="#">Solutions</a></li>
-                                <li><a href="#">Pricing</a></li>
-                                <li><a href="#">Meet Our Team</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">HR Guides</a></li>
-                            </ul>
-                        </div>
+                </div>
+                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                    <div class="wsus__footer_link">
+                        <h2>Navigation</h2>
+                        <ul>
+                            <li><a href="#">Solutions</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Meet Our Team</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">HR Guides</a></li>
+                        </ul>
                     </div>
-                    <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
-                        <div class="wsus__footer_link">
-                            <h2>Business</h2>
-                            <ul>
-                                <li><a href="#">Resources</a></li>
-                                <li><a href="#">Developers</a></li>
-                                <li><a href="#">Consulting</a></li>
-                                <li><a href="#">Business Advices</a></li>
-                                <li><a href="#">Case Study</a></li>
-                            </ul>
-                        </div>
+                </div>
+                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                    <div class="wsus__footer_link">
+                        <h2>Business</h2>
+                        <ul>
+                            <li><a href="#">Resources</a></li>
+                            <li><a href="#">Developers</a></li>
+                            <li><a href="#">Consulting</a></li>
+                            <li><a href="#">Business Advices</a></li>
+                            <li><a href="#">Case Study</a></li>
+                        </ul>
                     </div>
-                    <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
-                        <div class="wsus__footer_link">
-                            <h2>Solutions</h2>
-                            <ul>
-                                <li><a href="#">Business Plan</a></li>
-                                <li><a href="#">Feasibility Study </a></li>
-                                <li><a href="#">Startup Funding</a></li>
-                                <li><a href="#">Business Review</a></li>
-                                <li><a href="#">Investor Presentation</a></li>
-                            </ul>
-                        </div>
+                </div>
+                <div class="col-xl-2 col-sm-4 col-lg-3 wow fadeInUp">
+                    <div class="wsus__footer_link">
+                        <h2>Solutions</h2>
+                        <ul>
+                            <li><a href="#">Business Plan</a></li>
+                            <li><a href="#">Feasibility Study </a></li>
+                            <li><a href="#">Startup Funding</a></li>
+                            <li><a href="#">Business Review</a></li>
+                            <li><a href="#">Investor Presentation</a></li>
+                        </ul>
                     </div>
-                    <div class="col-xl-3 col-lg-8 wow fadeInUp">
-                        <div class="wsus__footer_instagram">
-                            <h2>Instagram</h2>
-                            <ul class="d-flex flex-wrap">
-                                <li>
-                                    <a href="#">
-                                        <img src="images/instagram_img_1.jpg" alt="Instagram" class="img-fluid">
-                                        <span><i class="fab fa-instagram"></i></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <img src="images/instagram_img_2.jpg" alt="Instagram" class="img-fluid">
-                                        <span><i class="fab fa-instagram"></i></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <img src="images/instagram_img_3.jpg" alt="Instagram" class="img-fluid">
-                                        <span><i class="fab fa-instagram"></i></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <img src="images/instagram_img_4.jpg" alt="Instagram" class="img-fluid">
-                                        <span><i class="fab fa-instagram"></i></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <img src="images/instagram_img_5.jpg" alt="Instagram" class="img-fluid">
-                                        <span><i class="fab fa-instagram"></i></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <img src="images/instagram_img_6.jpg" alt="Instagram" class="img-fluid">
-                                        <span><i class="fab fa-instagram"></i></span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+                </div>
+                <div class="col-xl-3 col-lg-8 wow fadeInUp">
+                    <div class="wsus__footer_instagram">
+                        <h2>Instagram</h2>
+                        <ul class="d-flex flex-wrap">
+                            <li>
+                                <a href="#">
+                                    <img src="images/instagram_img_1.jpg" alt="Instagram" class="img-fluid">
+                                    <span><i class="fab fa-instagram"></i></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="images/instagram_img_2.jpg" alt="Instagram" class="img-fluid">
+                                    <span><i class="fab fa-instagram"></i></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="images/instagram_img_3.jpg" alt="Instagram" class="img-fluid">
+                                    <span><i class="fab fa-instagram"></i></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="images/instagram_img_4.jpg" alt="Instagram" class="img-fluid">
+                                    <span><i class="fab fa-instagram"></i></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="images/instagram_img_5.jpg" alt="Instagram" class="img-fluid">
+                                    <span><i class="fab fa-instagram"></i></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="images/instagram_img_6.jpg" alt="Instagram" class="img-fluid">
+                                    <span><i class="fab fa-instagram"></i></span>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
