12 New pages added

--- a/blog_details.html
+++ b/blog_details.html
@@ -214,10 +214,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Photo Gallery</h1>
+                        <h1>Blog Details</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>photo gallery</li>
+                            <li>Blog Details</li>
                         </ul>
                     </div>
                 </div>
@@ -230,101 +230,122 @@
 
 
     <!--============================
-        PHOTO GALLERY START
+        BLOG PADETAILSGE START
     =============================-->
-    <div class="wsus__photo_gallery mt_115 xs_mt_95">
+    <section class="wsus__blog_details mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="wsus__pgoto_filter">
-                        <button type="button" class="active" data-filter="*">View All</button>
-                        <button type="button" data-filter=".business"> Business Services </button>
-                        <button type="button" data-filter=".technology">Technology</button>
-                        <button type="button" data-filter=".marketing">Marketing</button>
-                        <button type="button" data-filter=".development">Development</button>
-                        <button type="button" data-filter=".finance">Finance</button>
+                    <div class="wsus__blog_det_thumbnail">
+                        <img src="images/blog_det_thumbnail.png" alt="Blog" class="img-fluid">
                     </div>
                 </div>
-            </div>
-            <div class="row grid">
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_1.jpg">
-                        <img src="images/gallery_img_1.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_2.jpg">
-                        <img src="images/gallery_img_2.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_3.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_4.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_5.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_6.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_7.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_8.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_9.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
+                <div class="row">
+                    <div class="col-xl-8">
+                        <div class="wsus__blog_det_area">
+                            <div class="wsus__blog_det_text_top">
+                                <span class="category">Marketing</span>
+                                <div class="bg">
+                                    <ul>
+                                        <li>
+                                            <span>
+                                                <img src="images/clock_icon_wellow.png" alt="Clock" class="img-fluid">
+                                            </span>
+                                            April 22, 2023
+                                        </li>
+                                        <li>
+                                            <span>
+                                                <img src="images/user_icon_yellow.png" alt="Clock" class="img-fluid">
+                                            </span>
+                                            Hilary Ouse
+                                        </li>
+                                        <li>
+                                            <span>
+                                                <img src="images/comment_icon_yellow.png" alt="Clock" class="img-fluid">
+                                            </span>
+                                            3 Comments
+                                        </li>
+                                    </ul>
+                                    <h2>We make it easier for everyone to experience the world.</h2>
+                                </div>
+                            </div>
+                            <div class="wsus__blog_det_text">
+                                <p>Booking flights, accommodations, and activities were stress-free, thanks to their
+                                    efficient and responsive customer service. Any questions or concerns were addressed
+                                    promptly, and they went above and beyond to ensure our preferences were
+                                    accommodated.</p>
+                                <ul>
+                                    <li>Special Lessons &amp; Courses.</li>
+                                    <li>Receive Comprehensive Responses.</li>
+                                    <li>Most Prevalent Linguistic Medium.</li>
+                                    <li>On-Campus Living.</li>
+                                    <li>24 Language For Beginners.</li>
+                                    <li>Acquire Generalized Solutions.</li>
+                                </ul>
+                                <p>Throughout our journey, it was evident that websolution Travel Agency's prioritizes
+                                    customer satisfaction. The accommodations selected were not only comfortable but
+                                    also strategically located, offering breathtaking views and easy access to
+                                    attractions.</p>
+                                <div class="details_quote">
+                                    <p>“There are many television channels that are available globally and offer
+                                        programming from a wide range of countries and cultures some examples”</p>
+                                </div>
+                                <h3>Your logo is at the heart of your identity. An impactful
+                                    design, tailor-made and in line</h3>
+                                <p>Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar Ipum but the
+                                    majority. Monotonectally seize
+                                    markets with global schemas. Completely streamline premier information through
+                                    best-of-breed
+                                    Synergistically incubate team building synergy with B2C methods of empowerment
+                                    uniquely matrix turpis etus
+                                    Purus ut faucibus pulvinar elementum.</p>
+                            </div>
+                            <div class="row">
+                                <div class="col-xl-6">
+                                    <div class="wsus__service_details_center_img">
+                                        <img src="images/service_det_center_img_1.jpg" alt="Service" class="img-fluid">
+                                    </div>
+                                </div>
+                                <div class="col-xl-6">
+                                    <div class="wsus__service_details_center_img">
+                                        <img src="images/service_det_center_img_2.jpg" alt="Service" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="details_share_and_tags wow fadeInUp"
+                                style="visibility: visible; animation-name: fadeInUp;">
+                                <ul class="tags d-flex flex-wrap">
+                                    <li>Tags</li>
+                                    <li><a href="#">Adventure</a></li>
+                                    <li><a href="#">Explore</a></li>
+                                    <li><a href="#">Vacation</a></li>
+                                    <li><a href="#">Moments</a></li>
+                                    <li><a href="#">Travel Guides</a></li>
+                                </ul>
+                                <ul class="share d-flex flex-wrap">
+                                    <li>share</li>
+                                    <li><a class="facebook" href="#"><i class="fab fa-facebook-f"
+                                                aria-hidden="true"></i></a></li>
+                                    <li><a class="linkedin" href="#"><i class="fab fa-linkedin-in"
+                                                aria-hidden="true"></i></a></li>
+                                    <li><a class="twitter" href="#"><i class="fab fa-twitter"
+                                                aria-hidden="true"></i></a>
+                                    </li>
+                                    <li><a class="pinterest" href="#"><i class="fab fa-pinterest-p"
+                                                aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4"></div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!--============================
-        PHOTO GALLERY END
+        BLOG DETAILS END
     =============================-->
+
 
 
     <!--===========================
@@ -473,7 +494,6 @@
     <script src="js/slick.min.js"></script>
     <script src="js/venobox.min.js"></script>
     <script src="js/scroll_button.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
 
     <!--main/custom js-->
     <script src="js/main.js"></script>
