--- a/career.html
+++ b/career.html
@@ -214,10 +214,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Photo Gallery</h1>
+                        <h1>Career</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>photo gallery</li>
+                            <li>Career</li>
                         </ul>
                     </div>
                 </div>
@@ -230,101 +230,151 @@
 
 
     <!--============================
-        PHOTO GALLERY START
+        CAREER PAGE START
     =============================-->
-    <div class="wsus__photo_gallery mt_115 xs_mt_95">
+    <section class="wsus__career_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <div class="wsus__pgoto_filter">
-                        <button type="button" class="active" data-filter="*">View All</button>
-                        <button type="button" data-filter=".business"> Business Services </button>
-                        <button type="button" data-filter=".technology">Technology</button>
-                        <button type="button" data-filter=".marketing">Marketing</button>
-                        <button type="button" data-filter=".development">Development</button>
-                        <button type="button" data-filter=".finance">Finance</button>
+                <div class="col-xl-6">
+                    <div class="wsus__single_career">
+                        <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
+                        <h3>Software Engineer (SQL & BI Reporting)</h3>
+                        <ul>
+                            <li>
+                                <p>Full Time</p>
+                            </li>
+                            <li>
+                                <span><img src="images/location_icon_white.svg" alt="location" class="img-fluid"></span>
+                                Jackson Heights, NY 11372, United States
+                            </li>
+                        </ul>
+                        <p class="description">Nulla a ipsum nibh. Fusce purus elit, tristique vitae enim sed, auctor
+                            placerat est. Maecenas consequat, nibh consequat malesuada fringilla, mauris lorem dapibus
+                            metus.</p>
+                        <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_career">
+                        <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
+                        <h3>UI/UX Designer</h3>
+                        <ul>
+                            <li>
+                                <p>Full Time</p>
+                            </li>
+                            <li>
+                                <span><img src="images/location_icon_white.svg" alt="location" class="img-fluid"></span>
+                                Jackson Heights, NY 11372, United States
+                            </li>
+                        </ul>
+                        <p class="description">Nulla a ipsum nibh. Fusce purus elit, tristique vitae enim sed, auctor
+                            placerat est. Maecenas consequat, nibh consequat malesuada fringilla, mauris lorem dapibus
+                            metus.</p>
+                        <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_career">
+                        <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
+                        <h3>PHP/Web Developer</h3>
+                        <ul>
+                            <li>
+                                <p>Full Time</p>
+                            </li>
+                            <li>
+                                <span><img src="images/location_icon_white.svg" alt="location" class="img-fluid"></span>
+                                Jackson Heights, NY 11372, United States
+                            </li>
+                        </ul>
+                        <p class="description">Nulla a ipsum nibh. Fusce purus elit, tristique vitae enim sed, auctor
+                            placerat est. Maecenas consequat, nibh consequat malesuada fringilla, mauris lorem dapibus
+                            metus.</p>
+                        <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_career">
+                        <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
+                        <h3>Senior PHP Developer</h3>
+                        <ul>
+                            <li>
+                                <p>Full Time</p>
+                            </li>
+                            <li>
+                                <span><img src="images/location_icon_white.svg" alt="location" class="img-fluid"></span>
+                                Jackson Heights, NY 11372, United States
+                            </li>
+                        </ul>
+                        <p class="description">Nulla a ipsum nibh. Fusce purus elit, tristique vitae enim sed, auctor
+                            placerat est. Maecenas consequat, nibh consequat malesuada fringilla, mauris lorem dapibus
+                            metus.</p>
+                        <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_career">
+                        <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
+                        <h3>Software Engineer (SQL & BI Reporting)</h3>
+                        <ul>
+                            <li>
+                                <p>Full Time</p>
+                            </li>
+                            <li>
+                                <span><img src="images/location_icon_white.svg" alt="location" class="img-fluid"></span>
+                                Jackson Heights, NY 11372, United States
+                            </li>
+                        </ul>
+                        <p class="description">Nulla a ipsum nibh. Fusce purus elit, tristique vitae enim sed, auctor
+                            placerat est. Maecenas consequat, nibh consequat malesuada fringilla, mauris lorem dapibus
+                            metus.</p>
+                        <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_career">
+                        <a class="bookmark" href="#"><i class="far fa-bookmark"></i></a>
+                        <h3>UI/UX Designer</h3>
+                        <ul>
+                            <li>
+                                <p>Full Time</p>
+                            </li>
+                            <li>
+                                <span><img src="images/location_icon_white.svg" alt="location" class="img-fluid"></span>
+                                Jackson Heights, NY 11372, United States
+                            </li>
+                        </ul>
+                        <p class="description">Nulla a ipsum nibh. Fusce purus elit, tristique vitae enim sed, auctor
+                            placerat est. Maecenas consequat, nibh consequat malesuada fringilla, mauris lorem dapibus
+                            metus.</p>
+                        <a class="common_btn" href="#">More details <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
-            <div class="row grid">
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_1.jpg">
-                        <img src="images/gallery_img_1.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_2.jpg">
-                        <img src="images/gallery_img_2.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_3.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_4.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_5.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_6.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_7.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_8.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_9.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
+            <div class="wsus__pagination mt_60 wow fadeInUp">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Previous">
+                                <i class="far fa-arrow-left"></i>
+                            </a>
+                        </li>
+                        <li class="page-item"><a class="page-link active" href="#">01</a></li>
+                        <li class="page-item"><a class="page-link" href="#">02</a></li>
+                        <li class="page-item"><a class="page-link" href="#">03</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Next">
+                                <i class="far fa-arrow-right"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
-    </div>
+    </section>
     <!--============================
-        PHOTO GALLERY END
+        CAREER PAGE END
     =============================-->
+
 
 
     <!--===========================
@@ -473,7 +523,6 @@
     <script src="js/slick.min.js"></script>
     <script src="js/venobox.min.js"></script>
     <script src="js/scroll_button.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
 
     <!--main/custom js-->
     <script src="js/main.js"></script>
