--- a/career_details.html
+++ b/career_details.html
@@ -214,10 +214,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Photo Gallery</h1>
+                        <h1>Career Details</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>photo gallery</li>
+                            <li>Career Details</li>
                         </ul>
                     </div>
                 </div>
@@ -230,100 +230,96 @@
 
 
     <!--============================
-        PHOTO GALLERY START
+        CAREER DETAILS START
     =============================-->
-    <div class="wsus__photo_gallery mt_115 xs_mt_95">
+    <section class="wsus__career_details mt_120 xs_mt_100">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <div class="wsus__pgoto_filter">
-                        <button type="button" class="active" data-filter="*">View All</button>
-                        <button type="button" data-filter=".business"> Business Services </button>
-                        <button type="button" data-filter=".technology">Technology</button>
-                        <button type="button" data-filter=".marketing">Marketing</button>
-                        <button type="button" data-filter=".development">Development</button>
-                        <button type="button" data-filter=".finance">Finance</button>
+                <div class="col-xl-12">
+                    <div class="wsus__career_details_top">
+                        <div class="thumbnail">
+                            <img src="images/career_details_thumbnail.png" alt="Career" class="img-fluid">
+                        </div>
+                        <ul class="d-flex flex-wrap align-items-center">
+                            <li>
+                                <p>Full Time</p>
+                            </li>
+                            <li>
+                                <span><img src="images/location_icon_white.svg" alt="location" class="img-fluid"></span>
+                                Jackson Heights, NY 11372, United States
+                            </li>
+                            <li>
+                                <span><img src="images/user_icon_white.svg" alt="user" class="img-fluid"></span>
+                                No. of Vacancies: 2
+                            </li>
+                            <li>
+                                <span><img src="images/bag_icon_black.png" alt="Bag" class="img-fluid"></span>
+                                Experience: 1 - 3 Year
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="wsus__career_details_text">
+                        <h2>UI/UX Designer</h2>
+                        <p>Nulla a ipsum nibh. Fusce purus elit, tristique vitae enim sed, auctor placerat est. Maecenas
+                            consequat, nibh consequat malesuada fringilla, mauris lorem dapibus metus, non imperdiet
+                            nunc erat ultricies est. Praesent ames faucibus massa. Nam nec lorem sit amet leo consequat
+                            rutrum non orci Cras convallis nibh eget pellentesque commodo Nulla quis sem eget metus.</p>
+                        <h2>
+                            <span><img src="images/career_det_icon_1.png" alt="Career" class="img-fluid"></span>
+                            Key Responsibilities:
+                        </h2>
+                        <ul>
+                            <li>Lead the design of visually captivating user interfaces and experiences using Figma.
+                            </li>
+                            <li>Establish and maintain design libraries and style guides for consistent digital product
+                                presentation.</li>
+                            <li>Generate high-quality graphic designs, including banners, icons, and visual assets,
+                                utilizing Adobe Illustrator and Photoshop.</li>
+                            <li>Create Pitch Decks and project-related reports.</li>
+                            <li>Stay informed about the latest design trends, tools, and best practices to continually
+                                improve our design processes.</li>
+                            <li>Transform design concepts and wireframes into responsive, pixel-perfect designs aligned
+                                with modern design principles.</li>
+                        </ul>
+                        <h2>
+                            <span><img src="images/career_det_icon_2.png" alt="Career" class="img-fluid"></span>
+                            Educational Qualification:
+                        </h2>
+                        <ul>
+                            <li>B.Sc in Computer Science/ Engineering from any Reputed University.</li>
+                            <li>Training/Trade Course: UI UX Design, Graphic Design.</li>
+                        </ul>
+                        <h2>
+                            <span><img src="images/career_det_icon_3.png" alt="Career" class="img-fluid"></span>
+                            Benefits You’ll Get:
+                        </h2>
+                        <ul>
+                            <li>A great product line along with a highly motivated and experienced team to work with.
+                            </li>
+                            <li>2 festival bonuses (according to the company policy).</li>
+                            <li>Lunch and breakfast (fully subsidized) will be provided from the office.</li>
+                            <li>In-house tea/coffee and snacks.</li>
+                            <li>Annual salary increments according to performance.</li>
+                            <li>Casual leave encashment + Bonus</li>
+                            <li>Training and learning materials to improve skills.</li>
+                            <li>Annual bonus and Recognition.</li>
+                        </ul>
+                        <h2>
+                            <span><img src="images/career_det_icon_4.png" alt="Career" class="img-fluid"></span>
+                            Additional Info:
+                        </h2>
+                        <ul>
+                            <li>Salary Range (based on your experience and location)</li>
+                            <li>30,000 – 40,000 BDT/month</li>
+                        </ul>
+                        <a class="common_btn mt_35" href="#">Apply now <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
-            <div class="row grid">
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_1.jpg">
-                        <img src="images/gallery_img_1.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_2.jpg">
-                        <img src="images/gallery_img_2.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_3.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_4.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_5.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_6.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_7.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_8.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_9.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-            </div>
         </div>
-    </div>
+    </section>
     <!--============================
-        PHOTO GALLERY END
+        CAREER DETAILS END
     =============================-->
 
 
@@ -473,7 +469,6 @@
     <script src="js/slick.min.js"></script>
     <script src="js/venobox.min.js"></script>
     <script src="js/scroll_button.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
 
     <!--main/custom js-->
     <script src="js/main.js"></script>
