--- a/index_2.html
+++ b/index_2.html
@@ -674,9 +674,9 @@
             <div class="row event_2_slider">
                 <div class="col-xl-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <div class="wsus__single_event_2_img">
+                        <a class="wsus__single_event_2_img" href="#">
                             <img src="images/event_2_img_1.png" alt="Event" class="img-fluid">
-                        </div>
+                        </a>
                         <div class="wsus__single_event_2_text">
                             <p class="date">
                                 <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
@@ -692,9 +692,9 @@
                 </div>
                 <div class="col-xl-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <div class="wsus__single_event_2_img">
+                        <a class="wsus__single_event_2_img" href="#">
                             <img src="images/event_2_img_2.png" alt="Event" class="img-fluid">
-                        </div>
+                        </a>
                         <div class="wsus__single_event_2_text">
                             <p class="date">
                                 <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
@@ -710,9 +710,9 @@
                 </div>
                 <div class="col-xl-6">
                     <div class="wsus__single_event_2 d-flex flex-wrap">
-                        <div class="wsus__single_event_2_img">
-                            <img src="images/event_2_img_2.png" alt="Event" class="img-fluid">
-                        </div>
+                        <a class="wsus__single_event_2_img" href="#">
+                            <img src="images/event_2_img_6.png" alt="Event" class="img-fluid">
+                        </a>
                         <div class="wsus__single_event_2_text">
                             <p class="date">
                                 <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
