--- a/payment.html
+++ b/payment.html
@@ -214,10 +214,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Photo Gallery</h1>
+                        <h1>Payment</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>photo gallery</li>
+                            <li>Payment</li>
                         </ul>
                     </div>
                 </div>
@@ -230,101 +230,172 @@
 
 
     <!--============================
-        PHOTO GALLERY START
+        PAYMENT START
     =============================-->
-    <div class="wsus__photo_gallery mt_115 xs_mt_95">
+    <section class="wsus__payment pt_120 xs_pt_100">
         <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="wsus__pgoto_filter">
-                        <button type="button" class="active" data-filter="*">View All</button>
-                        <button type="button" data-filter=".business"> Business Services </button>
-                        <button type="button" data-filter=".technology">Technology</button>
-                        <button type="button" data-filter=".marketing">Marketing</button>
-                        <button type="button" data-filter=".development">Development</button>
-                        <button type="button" data-filter=".finance">Finance</button>
+            <div class="row justify-content-between">
+                <div class="col-xl-8">
+                    <div class="wsus__payment_option">
+                        <h5>Select your payment option</h5>
+                        <div class="row">
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_1.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_2.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_3.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_4.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_5.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_6.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_7.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_8.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_2.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                            <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 wow fadeInUp">
+                                <a href="#" class="wsus__payment_method" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">
+                                    <img src="images/payment_3.png" alt="payment" class="img-fluid w-100">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-4 wow fadeInUp">
+                    <div class="wsus__billing_summary m-0">
+                        <h4>Billing Summery</h4>
+                        <ul class="wsus__billing_product">
+                            <li>
+                                <a href="#" class="img">
+                                    <img src="images/product_cart_1.jpg" alt="product" class="img-fluid w-100">
+                                </a>
+                                <div class="text">
+                                    <a href="#">Black Sneakers</a>
+                                    <h6>$120.00</h6>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#" class="img">
+                                    <img src="images/product_cart_2.jpg" alt="product" class="img-fluid w-100">
+                                </a>
+                                <div class="text">
+                                    <a href="#">Black Sneakers</a>
+                                    <h6>$120.00</h6>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#" class="img">
+                                    <img src="images/product_cart_3.jpg" alt="product" class="img-fluid w-100">
+                                </a>
+                                <div class="text">
+                                    <a href="#">Black Sneakers</a>
+                                    <h6>$120.00</h6>
+                                </div>
+                            </li>
+                        </ul>
+                        <div class="wsus__total_price">
+                            <h3>Total <span>$ 360.00</span></h3>
+                            <p>Shipping Charge <span>00.00</span></p>
+                            <p>Discount <span>00.00</span></p>
+                            <p>Tax <span>00.00</span></p>
+                        </div>
+                        <h5>Sub Total <span>$ 360.00</span></h5>
                     </div>
                 </div>
             </div>
-            <div class="row grid">
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_1.jpg">
-                        <img src="images/gallery_img_1.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_2.jpg">
-                        <img src="images/gallery_img_2.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_3.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_4.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_5.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_6.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_7.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_8.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_9.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal_payment_popup">
+                        <p>From sleek racing flats to burly hiking boots, there are plenty of options to keep your feet
+                            comfortable during any activity.</p>
+
+                        <ul class="modal_iteam">
+                            <li>One popular belief, Lorem Ipsum is not simply random.</li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                            <li>To popular belief, Lorem Ipsum is not simply random.</li>
+                        </ul>
+
+                        <form class="modal_form">
+                            <div class="single_form">
+                                <label>Enter Something</label>
+                                <input type="text" placeholder="Enter Something">
+                            </div>
+                            <div class="single_form">
+                                <label>Enter Something</label>
+                                <textarea rows="3" placeholder="Enter Something"></textarea>
+                            </div>
+                            <div class="single_form">
+                                <label>select Something</label>
+                                <select class="select_js">
+                                    <option value="">Select Something</option>
+                                    <option value="">Something 1</option>
+                                    <option value="">Something 2</option>
+                                    <option value="">Something 3</option>
+                                </select>
+                            </div>
+                        </form>
+
+                        <div class="modal-footer">
+                            <button type="button" class="modal_closs_btn common_btn"
+                                data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="common_btn">Submit</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <!-- Modal -->
+
+    </section>
     <!--============================
-        PHOTO GALLERY END
+        PAYMENT END
     =============================-->
+
 
 
     <!--===========================
@@ -473,7 +544,6 @@
     <script src="js/slick.min.js"></script>
     <script src="js/venobox.min.js"></script>
     <script src="js/scroll_button.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
 
     <!--main/custom js-->
     <script src="js/main.js"></script>
