--- a/portfolio_details.html
+++ b/portfolio_details.html
@@ -366,7 +366,7 @@
                                 <input type="email" placeholder="Email">
                                 <input type="text" placeholder="Number">
                                 <textarea rows="4" placeholder="Write a Description"></textarea>
-                                <button class="common_btn" type="submit">Book Consultation <i
+                                <button class="common_btn w-100" type="submit">Book Consultation <i
                                         class="fas fa-chevron-right"></i></button>
 
                             </form>
