--- a/event.html
+++ b/event.html
@@ -214,10 +214,10 @@
             <div class="row">
                 <div class="col-12 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                     <div class="wsus__breadcrumb_text">
-                        <h1>Photo Gallery</h1>
+                        <h1>Events</h1>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li>photo gallery</li>
+                            <li>Events</li>
                         </ul>
                     </div>
                 </div>
@@ -230,100 +230,143 @@
 
 
     <!--============================
-        PHOTO GALLERY START
+        EVENT START
     =============================-->
-    <div class="wsus__photo_gallery mt_115 xs_mt_95">
+    <div class="wsus__event_page mt_95 xs_mt_75">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <div class="wsus__pgoto_filter">
-                        <button type="button" class="active" data-filter="*">View All</button>
-                        <button type="button" data-filter=".business"> Business Services </button>
-                        <button type="button" data-filter=".technology">Technology</button>
-                        <button type="button" data-filter=".marketing">Marketing</button>
-                        <button type="button" data-filter=".development">Development</button>
-                        <button type="button" data-filter=".finance">Finance</button>
+                <div class="col-xl-6">
+                    <div class="wsus__single_event_2 d-flex flex-wrap">
+                        <a class="wsus__single_event_2_img" href="#">
+                            <img src="images/event_2_img_1.png" alt="Event" class="img-fluid">
+                        </a>
+                        <div class="wsus__single_event_2_text">
+                            <p class="date">
+                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
+                                March 23, 2024
+                            </p>
+                            <a class="title" href="#">Business Management for all future projects.</a>
+                            <p class="time">
+                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
+                                8:00 am - 5:00 pm
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_event_2 d-flex flex-wrap">
+                        <a class="wsus__single_event_2_img" href="#">
+                            <img src="images/event_2_img_2.png" alt="Event" class="img-fluid">
+                        </a>
+                        <div class="wsus__single_event_2_text">
+                            <p class="date">
+                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
+                                March 23, 2024
+                            </p>
+                            <a class="title" href="#">Business Management for all future projects.</a>
+                            <p class="time">
+                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
+                                8:00 am - 5:00 pm
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_event_2 d-flex flex-wrap">
+                        <a class="wsus__single_event_2_img" href="#">
+                            <img src="images/event_2_img_3.png" alt="Event" class="img-fluid">
+                        </a>
+                        <div class="wsus__single_event_2_text">
+                            <p class="date">
+                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
+                                March 23, 2024
+                            </p>
+                            <a class="title" href="#">Business Management for all future projects.</a>
+                            <p class="time">
+                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
+                                8:00 am - 5:00 pm
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_event_2 d-flex flex-wrap">
+                        <a class="wsus__single_event_2_img" href="#">
+                            <img src="images/event_2_img_4.png" alt="Event" class="img-fluid">
+                        </a>
+                        <div class="wsus__single_event_2_text">
+                            <p class="date">
+                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
+                                March 23, 2024
+                            </p>
+                            <a class="title" href="#">Business Management for all future projects.</a>
+                            <p class="time">
+                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
+                                8:00 am - 5:00 pm
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_event_2 d-flex flex-wrap">
+                        <a class="wsus__single_event_2_img" href="#">
+                            <img src="images/event_2_img_5.png" alt="Event" class="img-fluid">
+                        </a>
+                        <div class="wsus__single_event_2_text">
+                            <p class="date">
+                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
+                                March 23, 2024
+                            </p>
+                            <a class="title" href="#">Business Management for all future projects.</a>
+                            <p class="time">
+                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
+                                8:00 am - 5:00 pm
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="wsus__single_event_2 d-flex flex-wrap">
+                        <a class="wsus__single_event_2_img" href="#">
+                            <img src="images/event_2_img_6.png" alt="Event" class="img-fluid">
+                        </a>
+                        <div class="wsus__single_event_2_text">
+                            <p class="date">
+                                <span><img src="images/calendar_icon_blue.svg" alt="Calendar" class="img-fluid"></span>
+                                March 23, 2024
+                            </p>
+                            <a class="title" href="#">Business Management for all future projects.</a>
+                            <p class="time">
+                                <span><img src="images/clock_icon_white.png" alt="Clock" class="img-fluid"></span>
+                                8:00 am - 5:00 pm
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row grid">
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_1.jpg">
-                        <img src="images/gallery_img_1.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_2.jpg">
-                        <img src="images/gallery_img_2.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_3.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_4.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_5.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_6.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 technology finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_7.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 business development">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_8.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
-                <div class="col-xl-4 marketing finance">
-                    <a class="wsus__photo_gallery_item venobox" data-gall="gallery01" href="images/gallery_img_3.jpg">
-                        <img src="images/gallery_img_9.jpg" alt="gallery1" class="img-fluid w-100">
-                        <span class="gal_img_overlay">
-                            <i class="far fa-plus"></i>
-                        </span>
-                    </a>
-                </div>
+            <div class="wsus__pagination mt_60 wow fadeInUp">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Previous">
+                                <i class="far fa-arrow-left"></i>
+                            </a>
+                        </li>
+                        <li class="page-item"><a class="page-link active" href="#">01</a></li>
+                        <li class="page-item"><a class="page-link" href="#">02</a></li>
+                        <li class="page-item"><a class="page-link" href="#">03</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Next">
+                                <i class="far fa-arrow-right"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
     <!--============================
-        PHOTO GALLERY END
+        EVENT END
     =============================-->
 
 
@@ -473,7 +516,6 @@
     <script src="js/slick.min.js"></script>
     <script src="js/venobox.min.js"></script>
     <script src="js/scroll_button.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
 
     <!--main/custom js-->
     <script src="js/main.js"></script>
