--- a/service_details.html
+++ b/service_details.html
@@ -409,7 +409,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="col-xl-4">
@@ -508,7 +507,7 @@
                                 <input type="email" placeholder="Email">
                                 <input type="text" placeholder="Number">
                                 <textarea rows="4" placeholder="Write a Description"></textarea>
-                                <button class="common_btn" type="submit">Book Consultation <i
+                                <button class="common_btn w-100" type="submit">Book Consultation <i
                                         class="fas fa-chevron-right"></i></button>
 
                             </form>
